[gd_scene load_steps=2 format=3 uid="uid://energy_pick_panel"]

[ext_resource type="Script" path="res://scenes/battle/ui/energy_pick_panel.gd" id="1"]

[node name="EnergyPickPanel" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color(0, 0, 0, 0.55)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="Center"]
layout_mode = 2
custom_minimum_size = Vector2(420, 140)

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
text = "Choose energy color"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Center/Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="RedButton" type="Button" parent="Center/Panel/VBox/HBox"]
layout_mode = 2
text = "Red"

[node name="BlueButton" type="Button" parent="Center/Panel/VBox/HBox"]
layout_mode = 2
text = "Blue"

[node name="GreenButton" type="Button" parent="Center/Panel/VBox/HBox"]
layout_mode = 2
text = "Green"

